fix button jumping when load front script

--- a/pages/updateCards/components/CardPreview/styles.scss
+++ b/pages/updateCards/components/CardPreview/styles.scss
@@ -2,4 +2,8 @@
   width: 500px;
   height: calc(100vh - 50px);
   border: none;
+
+  &.invisible {
+    visibility: hidden;
+  }
 }
